k8s-ingress-gateway-setup/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-test-lb-gateway
spec:
  controllerName: gateway.k8s.aws/lb
  description: "AWS LB using Gateway in K8S"
