k8s-ingress-gateway-setup/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: "aws-test-lb-gw-listeners"
  namespace: roboshop
spec:
  gatewayClassName: aws-test-lb-gateway
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: aws-test-lb-gw-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
         namespaces:
          from: Same
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
